kubernetes/airflow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-service
spec:
  type: NodePort
  selector:
    app: airflow
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30002
