kubernetes/mqtt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mqtt-service
spec:
  type: NodePort
  selector:
    app: mqtt
  ports:
  - port: 1883
    targetPort: 1883
    nodePort: 30003
